Ajuste timeline twitter and fb & reajuste responsive menu

--- a/less/estilos.less
+++ b/less/estilos.less
@@ -427,7 +427,7 @@ border-bottom: 1px solid @gris;
 .columna1-1, .columna3-1 {
    	width: 0.4%;
    	padding: 10px;
-   	height: 10%;
+   	//height: 10%;
   	margin-top: 38px;
  	background: @azul;
    	.redondeado (50px 50px 50px 50px);
@@ -534,12 +534,12 @@ border-bottom: 1px solid @gris;
         .columitem_one { padding-bottom: 122px; }
   }
 // Cabecera Logo - IconsSocials  
-@media (min-width:364px) and (max-width:619px){header div article {&:first-child{max-width:225px;}}}  
-@media (max-width:518px){#ish6{ display:none;}}
-@media (max-width:487px){#ish5{ display:none;}}
-@media (max-width:454px){#ish4{ display:none;}}
-@media (max-width:421px){#ish3{ display:none;}}
-@media (max-width:387px){#ish2{ display:none;}}
+@media (min-width:364px) and (max-width:636px){header div article {&:first-child{max-width:225px;}}}  //619px
+@media (max-width:536px){#ish6{ display:none;}} //518px
+@media (max-width:505px){#ish5{ display:none;}} //487px
+@media (max-width:471px){#ish4{ display:none;}} //454px
+@media (max-width:437px){#ish3{ display:none;}} //421px, 423px
+@media (max-width:403px){#ish2{ display:none;}} //387px, 389px
 @media (max-width:364px){#ish1{ display:none;} .logo-innodite { width:100%; } }
 /* Estos ajustes son un PQC con el 1° item fliper image back 
    ' Debe haber otra forma de hacer esto. que no sea así
