--- a/less/sociales.less
+++ b/less/sociales.less
@@ -87,36 +87,22 @@
 }
 
 /*::::::::::::::::::::::::INICIO REDES SOCIALES:::::::::::::::::::::::::*/
-.grid-unit{
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 auto;
-    width: 200px;
-    height: 25px;
 
+#twitter-widget-0 {
+    float: none;
+    width: 100% !important;
+    height: 100% !important;
 }
-.twitter-timeline{
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 auto;
-    height: 400px;
-
-}
-
+    
 .fb-like-box{
     margin: 0 auto;
-    width: 200px;
-    height: 400px;
-
-    /*margin-top: 40px;*/
-    background: #FFFFFF;
+    width: 100%;
+    height: 100%;    
+    background: #333;
+    color:#CFCFCF;
     .redondeado (@medida:5px 5px 5px 5px;);
     border: 1px solid :#E3E3E3;
     margin-bottom: 10px;
-    /*.sombreado;*/
-}
-#fb-root{
-    width: 40%;
 }
 
 .etabs { margin: 0; padding: 0; text-align: left;}
@@ -124,13 +110,13 @@
 .tab a {  font-size: 14px; line-height: 2em; display: block; padding: 0 10px; outline: none; text-decoration: none; color: #0094B9; }
 .tab.active {  color: #FFF;  padding-top: 6px; position: relative; top: 1px; border-color: #666; }
 .tab a.active { font-weight: bold; }
-.tab-container .panel-container { background: #0094B9;  width: 205px; height: 435px; border: solid #0094B9 1px; padding: 10px; -moz-border-radius: 0 10px 10px 10px; -webkit-border-radius: 0 10px 10px 10px; }
-.tab-container{float: right;}
-.panel-container { margin-bottom: 10px; }
+.tab-container .panel-container { background: #0094B9; height: 90%; border: solid #0094B9 1px; padding: 10px; -moz-border-radius: 0 10px 10px 10px; -webkit-border-radius: 0 10px 10px 10px; }
+.tab-container{float: none;}
+.panel-container { margin-bottom: 10px; min-width:180px; }
 .tab { text-decoration: none}
 
 #tabs1-tw, #tabs1-fb{
-    float: left;
+    float: none;
 }
 
 
