Ajustes en Head and Menú Principal and Animation Service, (Head & Icons Social Responsive), (Menú Principal se divide en 2 menues, horizontal y vertical que se complementan bajo responsive desing), se ajusta mediaQuery en slider para mejorar el responsive desing. Ademas se finalizo los ajustes en las animaciones para las imagenes de los servicios en página principal. Ajuste en Menú Offset. Ajuste Semi Final

--- a/less/sociales.less
+++ b/less/sociales.less
@@ -47,8 +47,8 @@
     overflow: hidden;
     transition: color #009DC4;
 }
-
-.SocialCabecera, .SocialCabeceraMenu {
+/*
+.SocialCabecera{
     display: inline-block;
     width: 10%;
     line-height: 70px;
@@ -61,11 +61,16 @@
     color: #0094B9;
     overflow: hidden;
     transition: color #009DC4;
-} 
+}
+*/
 .SocialCabeceraMenu {
     color: #FFFFFF;
-    margin-left: -50px;
-    padding: -30px;
+    font-size: 20px;
+    font-family: Entypo;
+    text-align: center;
+    transition: color #009DC4;
+    color: #0094B9;
+    border-radius: 50%;
 }
 
 .SocialHead:hover,.SocialCabeceraMenu:hover,.SocialCabecera:hover{
